Update project dependencies and configuration for SOClient
Updated Maven dependencies and repository information to reflect the new SOClient version (3.0.0) and associated SOCommon version (6.0.0). Modified README and test files to reflect the transition to StoredObject's server and updated the Java SDK configuration in IDE settings. Removed outdated configurations from `pom.xml` and `.idea` files.